--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ title = "Hank's Cyberton"
 languageCode = "en-us"
 paginate = "15" # Number of posts per page
 theme = "mainroad"
-disqusShortname = "hankgong" # Enable comments by entering your Disqus shortname
+disqusShortname = "codinghub-1" # Enable comments by entering your Disqus shortname
 googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 publishDir = "docs"
 
